# OpenCalc

./: CMakeLists.txt  OpenCalc.cpp  README.md  lwipopts.h  lwipopts_examples_common.h  mbedtls_config.h  mbedtls_config_examples_common.h
docs/: GettingStarted.md  MoreResources.md
src/core/: CMakeLists.txt
src/core/drivers/: CMakeLists.txt  st7789_lcd.pio
